--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gh-page-deploy",
-  "homepage": "https://jayromulus.github.io/gh-page-deploy",
   "version": "0.1.0",
+  "homepage": "https://jayromulus.io/gh-pages-deploy/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
